[package]
authors = ["The Knurling-rs developers"]
categories = ["embedded", "no-std"]
description = "A test harness for embedded devices"
edition = "2021"
keywords = ["knurling", "defmt", "testing"]
license = "MIT OR Apache-2.0"
name = "avr-defmt-test"
readme = "README.md"
repository = "https://github.com/knurling-rs/defmt"
version = "0.3.2"

[dependencies]
defmt-test-macros = { version = "=0.3.1", path = "macros" }
